--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">RealEstateAssignment</string>
+    <string name="select_option">Select an Option</string>
+    <string name="select_an_option">Select an Option</string>
+    <string name="facility_not_available_in_this_combination">Facility not available in this combination</string>
 </resources>
